fixed overflowing text in cats project selection

--- a/webui/app/cats/style.css
+++ b/webui/app/cats/style.css
@@ -215,6 +215,7 @@
     line-height: 1;
     margin:4px 4px;
     float:left;
+    overflow: hidden;
 }
 .app-cats-project-selector-button {
     font-size: 14px;
